# SignLanguageRecognizer

./: .gitignore  LICENSE  README.md  SignLanguage.py  pyproject.toml
